--- a/index.html
+++ b/index.html
@@ -24,9 +24,24 @@
         <div class="mobile_menu__phone">
           <img class="" src="img\icons\phone.svg" alt="">
         </div>
-        <div class="mobile_menu__button">
-          <p class="mobile_menu__button__text">Меню</p>
-          <p class="mobile_menu__button__text_dots">...</p>
+        <div class="mobile_menu__navigation">
+          <input id="navigation__toggle" type="checkbox" />
+          <label class="navigation__btn" for="navigation__toggle">
+            <span>
+              <div class="mobile_menu__button">
+                <p class="mobile_menu__button__text">Меню</p>
+                <p class="mobile_menu__button__text_dots">...</p>
+              </div>
+            </span>
+          </label>
+          <ul class="navigation__box">
+            <li><a class="box__item" href="#">Покупка</a></li>
+      			<li><a class="box__item" href="#">Аренда</a></li>
+      			<li><a class="box__item" href="#">Горячие предложения</a></li>
+      			<li><a class="box__item" href="#">Путеводитель</a></li>
+      			<li><a class="box__item" href="#">Контакты</a></li>
+            <li><a class="box__item" href="#">Инвестирование</a></li>
+          </ul>
         </div>
         <div class="mobile_menu__optional_buttons">
           <select class="optional_buttons__lang" name="">
@@ -363,6 +378,7 @@
   <footer class="footer">
     <div class="footer__feedback">
       <img class="footer_img_womanbg" src="img/bg/womanbg.png" alt="">
+      <img class="footer_img_womanbg_desktop" src="img/bg/bg3.png" alt="">
       <img class="footer_img_woman" src="img/bg/woman.png" alt="">
       <p class="footer__title">Хотите в отпуск, но трудно выбрать недвижимость по вкусу?</p>
       <p class="footer__description">Мы бесплатно консультируем на нескольких языках и готовы оперативно ответить на любые вопросы, просто попросите перезвонить</p>
@@ -370,7 +386,7 @@
         <input class="footer__input" type="email" name="" value="" placeholder="Ваш телефон">
         <button class="footer__form_button promotions__form_button" type="button" name="button">Отправить</button>
       </div>
-      <p class="footer__ps">Нажимая кнопку «отправить», вы принимаете пользовательское соглашение на обработку персональных данных</p>         
+      <p class="footer__ps">Нажимая кнопку «отправить», вы принимаете пользовательское соглашение на обработку персональных данных</p>
     </div>
   </footer>
 <script type="text/javascript" src="scripts/main.js"></script>
